2005-08-22  Yves Combe,,,  <yves@ycombe.net>

	add en entry in login, to enter typing the login. Configurable by profile.

	* src/boards/python/admin/board_list.py:
	* src/boards/python/login.py:

2005-08-22  Bruno coudoin  <bruno.coudoin@free.fr>

	G~ran Uddeborg <goeran@uddeborg.se> added voices for continents
	(nobody never did it before).
	Fixed names in gcompris_geography_sv.assetml.in

	* boards/geography/board1_0.xml.in:
	* boards/sounds/sv/geography/gcompris_geography_sv.assetml.in:
	* boards/sounds/sv/geography/africa.ogg:
	* boards/sounds/sv/geography/antarctica.ogg:
	* boards/sounds/sv/geography/asia.ogg:
	* boards/sounds/sv/geography/america.ogg:
	* boards/sounds/sv/geography/europe.ogg:

2005-08-22  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/sudoku.py: Completed the symbols level.
	  the board is fully functionnal but we need nore data in the dataset.

2005-08-21  Yves Combe,,,  <yves@ycombe.net>

	key is no more passed in combo_locales nor combo_locales_asset (for general conf control).
	add a repeat button in bar for login. Usefull to restart the login process in case of mistake.
	
	* src/boards/click_on_letter.c: (config_start):
	* src/boards/colors.c: (colors_config_start):
	* src/boards/py-mod-gcompris.c: (py_gcompris_combo_locales),
	(py_gcompris_combo_locales_asset):
	* src/boards/python/login.py:
	* src/boards/python/pythontest.py:
	* src/gcompris/board_config.c: (check_key),
	(gcompris_combo_locales), (gcompris_combo_locales_asset):
	* src/gcompris/board_config.h:
	* src/gcompris/gcompris_db.c: (gcompris_get_board_conf):

2005-08-21  Yves Combe,,,  <yves@ycombe.net>

	fix crash in colors.c config_start (missing static statement).
	add tools for global conf in board_list.

	* src/boards/click_on_letter.c: (save_table):
	* src/boards/colors.c: (save_table), (conf_ok),
	(colors_config_start):
	* src/boards/python/admin/board_list.py:

2005-08-21  Bruno coudoin  <bruno.coudoin@free.fr>
