@@ -485,7 +485,7 @@ AC_SUBST(VERSION_VOICES_ALPHABET_SV)
 VERSION_VOICES_COLORS_SV=1.0
 AC_SUBST(VERSION_VOICES_COLORS_SV)
 
-VERSION_VOICES_GEOGRAPHY_SV=1.0
+VERSION_VOICES_GEOGRAPHY_SV=1.1
 AC_SUBST(VERSION_VOICES_GEOGRAPHY_SV)
 
 VERSION_VOICES_MISC_SV=1.0
